Issue #470 style: Fix horizontal scroll for fancy-tree nodes

--- a/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
+++ b/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
@@ -1,9 +1,9 @@
-body > .inner {
-  display: none;
+body>.inner {
+    display: none;
 }
 
-body.pg-loaded > .inner {
-  display: block;
+body.pg-loaded>.inner {
+    display: block;
 }
 
 body {
@@ -40,8 +40,7 @@ body {
 .main-body {
     height: 90%!important;
     margin-bottom: 0!important;
-    margin-top: 0em!important;
-    // padding-top: 5px !important;
+    margin-top: 0em!important; // padding-top: 5px !important;
 }
 
 .ui-fancytree:focus {
@@ -79,12 +78,12 @@ body {
     border: none;
 }
 
-.tree-search-item{
+.tree-search-item {
     font-size: 1.2em!important;
     font-weight: bold!important;
 }
 
-.search-input-container{
+.search-input-container {
     padding: 0.5em 1.25em!important;
 }
 
@@ -96,13 +95,13 @@ body {
 }
 
 #collection-tree::-webkit-scrollbar {
-    width: 0!important;
-    height: 0!important;
+    width: 0!important; // height: 0!important;
 }
 
 #collection-tree {
     height: 100%;
     overflow: auto;
+    overflow-x: scroll;
 }
 
 #collection-tree span {
@@ -110,9 +109,10 @@ body {
     outline: none!important;
 }
 
-#collection-tree i{
+#collection-tree i {
     color: #4a4a4a!important;
 }
+
 #collection-tree span.fancytree-active span.fancytree-title,
 #collection-tree span.fancytree-selected span.fancytree-title {
     color: #fff!important;
@@ -122,6 +122,7 @@ body {
 #collection-tree span.fancytree-node {
     min-height: 24px!important;
     font-size: 1.1em!important;
+    width: 310px!important
 }
 
 .primary.button-overrides {
@@ -197,11 +198,14 @@ body {
     cursor: pointer!important;
 }
 
-.ui.dropdown .menu .selected.item, .ui.dropdown.selected,.ui.dropdown .menu .active.item{
+.ui.dropdown .menu .selected.item,
+.ui.dropdown.selected,
+.ui.dropdown .menu .active.item {
     font-weight: initial;
-    color: rgba(0,0,0,.95);
+    color: rgba(0, 0, 0, .95);
     background: initial;
 }
+
 
 
 /* for not able to fetch content */
@@ -210,15 +214,15 @@ body {
     font-weight: bold;
 }
 
-.no-content-dialog>div{
+.no-content-dialog>div {
     margin: 1em 0;
 }
 
-.no-content-dialog .checkmark.box.icon{
+.no-content-dialog .checkmark.box.icon {
     font-size: 2em!important;
 }
 
-#content-not-fetch-message{
+#content-not-fetch-message {
     font-size: 1.2em;
 }
 
@@ -228,10 +232,12 @@ body {
     font-color: grey;
     color: black;
     font-weight: 300;
-    font-family: "raleway",sans-serif;
+    font-family: "raleway", sans-serif;
 }
 
 .search-menu-cursor {
     cursor: pointer;
 }
+
+
 /* for not able to fetch content */
